[package]
name = "dsp-stuff-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0.107", features = ["extra-traits", "fold", "full", "visit", "visit-mut"] }
darling = "0.14.4"
proc-macro2 = "1.0.52"
quote = "1.0.26"

[package.metadata.hackerman.stash.dependencies]
syn = "1.0.102"
