[package]
name = "dsp-stuff-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "2.0.70", features = ["extra-traits", "fold", "full", "visit", "visit-mut"] }
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.36"

[package.metadata.hackerman.stash.dependencies]
syn = "1.0.102"
