[package]
name = "dsp-stuff"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = { version = "1.5.0", features = [ "serde" ] }
async-trait = "0.1.53"
atomig = { version = "0.4.0", features = ["derive", "serde"] }
audioviz = { version = "0.4.4", default-features = false }
biquad = "0.4.2"
clap = { version = "3.1.10", features = ["derive"] }
collect_slice = "1.2.0"
color-eyre = "0.6.1"
console-subscriber = { version = "0.1.4", optional = true }
cpal = { version = "0.13.5", features = ["jack"] }
dasp_envelope = { version = "0.11.0", features = ["peak"] }
dasp_peak = "0.11.0"
derivative = "2.2.0"
dsp-stuff-derive = { path = "../dsp-stuff-derive/" }
dsp-stuff-gpl = { git = "https://github.com/simmsb/dsp-stuff-gpl.git", optional = true, rev = "170f1680a08fd41379aa49bf88a1e4553d50929c" }
eframe = { version = "0.18.0", features = ["default_fonts", "persistence"], default-features = false }
egui = "0.18"
egui_nodes = { git = "https://github.com/simmsb/egui_nodes.git", rev = "6e99583ba7159defa7d61932525bb1ad3f97023f" }
itertools = "0.10.3"
once_cell = "1.10.0"
oneshot = "0.1.3"
rfd = { version = "0.8.2", features = ["xdg-portal"], default-features = false }
rivulet = { git = "https://github.com/simmsb/rivulet", rev = "b2416e5e7eb87162d693c74ed62df33e252e9647" }
rsor = "0.1.3"
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0.79"
sharded-slab = "0.1.4"
simple_moving_average = "0.1.2"
strum = { version = "0.24.0", features = ["derive"] }
tokio = { version = "1.17.0", features = ["rt", "time", "macros", "rt-multi-thread", "tracing", "sync"] }
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
# tracing-flame = { version = "0.2.0" }
#native_helper = { git = "https://github.com/emilk/websocket_experiment.git" }

[features]
default = ["gpl_effects"]
gpl_effects = ["dsp-stuff-gpl"]
console = ["console-subscriber"]
windows = ["cpal/asio"]
