[package]
name = "dsp-stuff"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = { version = "1.5.1", features = [ "serde" ] }
async-trait = "0.1.57"
atomig = { version = "0.4.0", features = ["derive", "serde"] }
audioviz = { version = "0.5.0", features = ["spectrum", "processor"], default-features = false }
biquad = "0.4.2"
bitvec = "1.0.1"
cc = { version = "1.0.73", features = ["parallel"], default-features = false }
clap = { version = "4.0.15", features = ["derive"] }
collect_slice = "1.2.0"
color-eyre = "0.6.2"
console-subscriber = { version = "0.1.8", optional = true }
cpal = { version = "0.14.0", features = ["jack"] }
dasp_envelope = { version = "0.11.0", features = ["peak"] }
dasp_peak = "0.11.0"
derivative = "2.2.0"
dsp-stuff-derive = { path = "../dsp-stuff-derive/" }
dsp-stuff-gpl = { git = "https://github.com/simmsb/dsp-stuff-gpl.git", optional = true, rev = "170f1680a08fd41379aa49bf88a1e4553d50929c" }
eframe = { version = "0.19.0", features = ["default_fonts", "persistence"] }
egui = "0.19.0"
egui_nodes = { git = "https://github.com/simmsb/egui_nodes.git", rev = "6f94c16de7b05aaee9def0d8846fe6eabfcb1578" }
getrandom = { version = "0.2.7", features = ["js", "std"], default-features = false }
itertools = "0.10.5"
memchr = { version = "2.5.0", features = ["use_std"] }
once_cell = "1.15.0"
oneshot = "0.1.5"
rfd = { version = "0.10.0", features = ["xdg-portal"], default-features = false }
rivulet = { git = "https://github.com/simmsb/rivulet", rev = "b2416e5e7eb87162d693c74ed62df33e252e9647" }
rsor = "0.1.3"
serde = { version = "1.0.145", features = ["derive", "rc"] }
serde_json = "1.0.86"
sharded-slab = "0.1.4"
simple_moving_average = "0.1.2"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.21.2", features = ["rt", "time", "macros", "rt-multi-thread", "tracing", "sync"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
# tracing-flame = { version = "0.2.0" }
#native_helper = { git = "https://github.com/emilk/websocket_experiment.git" }

[features]
default = ["gpl_effects"]
gpl_effects = ["dsp-stuff-gpl"]
console = ["console-subscriber"]
windows = ["cpal/asio"]

[package.metadata.hackerman.stash.dependencies]
getrandom = false
memchr = false
cc = false
